feat(example): percona-xtradb migration tasks
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/openstack_helm_endpoints/tasks/main.yml
+++ b/roles/openstack_helm_endpoints/tasks/main.yml
@@ -59,7 +59,7 @@
       kubernetes.core.k8s_info:
         api_version: v1
         kind: Secret
-        name: percona-xtradb
+        name: percona-xtradb-keys-secret
         namespace: openstack
       register: _openstack_helm_endpoints_oslo_db_secret
 
