--- a/roles/vault_secrets/defaults/main.yml
+++ b/roles/vault_secrets/defaults/main.yml
@@ -1,7 +1,7 @@
 # Copyright (c) 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
-vault_secret_kubeconfig: "{{ kubeconfig_path | default('/etc/kubernetes/admin.conf') }}"
+vault_secrets_kubeconfig: "{{ kubeconfig_path | default('/etc/kubernetes/admin.conf') }}"
 vault_secrets_bootstrap_group: controllers
 
 # vault_secrets:
