fix: update comments
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/percona_xtradb_cluster/tasks/main.yml
+++ b/roles/percona_xtradb_cluster/tasks/main.yml
@@ -63,14 +63,14 @@
       kind: ExternalSecret
       metadata:
         namespace: openstack
-        name: percona-xtradb-keys-secret # Mimic helm chart format for simple secrets
+        name: percona-xtradb-keys-secret # Mimic helm chart format for keys-secrets
       spec:
         refreshInterval: "60s"
         secretStoreRef:
           name: atmosphere # Mimic helm chart default secret store name and type
           kind: ClusterSecretStore
         target:
-          name: percona-xtradb-keys-secret # Mimic helm chart format for simple secrets
+          name: percona-xtradb-keys-secret # Mimic helm chart format for keys-secrets
         dataFrom:
           - extract:
               key: percona-xtradb/cluster-secrets
