feat: add consul-template reference
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/playbooks/secrets.yml
+++ b/playbooks/secrets.yml
@@ -28,6 +28,10 @@
     vault_secrets_webhook_vault_env_image: "{{ atmosphere_images['vault_secrets_webhook_vault_env'] }}"
     vault_secrets_webhook_node_selector:
       openstack-control-plane: enabled
+    vault_secrets_webhook_helm_values:
+      env:
+        VAULT_IMAGE: "{{ atmosphere_images['vault'] }}"
+        VAULT_CT_IMAGE: "{{ atmosphere_images['consul_template'] }}"
 
 - name: Deploy External Secrets
   hosts: controllers
