--- a/roles/vault_token/defaults/main.yml
+++ b/roles/vault_token/defaults/main.yml
@@ -5,6 +5,7 @@ vault_token_role: ansible
 vault_token_service_account: ansible
 vault_token_service_account_namespace: vault-operator-system
 vault_token_configmap: vault-get-token
+vault_token_container_image: "{{ atmosphere_images['vault'] }}"
 
 vault_token_pod_environment_variables:
   VAULT_ADDR: https://vault.vault-operator-system:8200
