--- a/roles/vault_token/tasks/main.yml
+++ b/roles/vault_token/tasks/main.yml
@@ -28,7 +28,7 @@
     namespace: "{{ vault_token_service_account_namespace }}"
     kubeconfig: "{{ vault_token_kubeconfig }}"
     pod_name: vault-get-token-{{ ansible_date_time.epoch }}
-    container_image: "{{ atmosphere_images['vault'] }}"
+    container_image: "{{ vault_token_container_image }}"
     command: ["sh", "/etc/vault-scripts/token.sh"]
     env_vars: "{{ vault_token_pod_environment_variables }}"
     secret_mounts: "{{ vault_token_pod_secret_mounts }}"
