--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -40,6 +40,7 @@ _atmosphere_images:
   cluster_api_kubeadm_bootstrap_controller: "{{ atmosphere_image_prefix }}registry.k8s.io/cluster-api/kubeadm-bootstrap-controller:v1.8.4"
   cluster_api_kubeadm_control_plane_controller: "{{ atmosphere_image_prefix }}registry.k8s.io/cluster-api/kubeadm-control-plane-controller:v1.8.4"
   cluster_api_openstack_controller: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/capi-openstack-controller:{{ atmosphere_release }}"
+  consul_template: "{{ atmosphere_image_prefix }}docker.io/hashicorp/consul-template:0.41.0"
   csi_node_driver_registrar: "{{ atmosphere_image_prefix }}registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.10.0"
   csi_rbd_attacher: "{{ atmosphere_image_prefix }}registry.k8s.io/sig-storage/csi-attacher:v4.5.0"
   csi_rbd_plugin: "{{ atmosphere_image_prefix }}quay.io/cephcsi/cephcsi:v3.11.0"
