--- a/roles/vault/defaults/main.yml
+++ b/roles/vault/defaults/main.yml
@@ -14,3 +14,14 @@ vault_spec: {}
 
 vault_log_level: info
 vault_kubeconfig: "{{ kubeconfig_path | default('/etc/kubernetes/admin.conf') }}"
+
+vault_keycloak_server_url: "https://{{ keycloak_host }}"
+vault_keycloak_admin_realm_name: master
+vault_keycloak_admin_client_id: admin-cli
+vault_keycloak_admin_user: admin
+vault_keycloak_admin_password: "{{ keycloak_admin_password }}"
+vault_keycloak_realm: atmosphere
+vault_keycloak_realm_name: Atmosphere
+
+vault_keycloak_client_id: vault
+# vault_keycloak_client_secret:
