--- a/roles/libvirt/vars/main.yml
+++ b/roles/libvirt/vars/main.yml
@@ -40,5 +40,7 @@ _libvirt_helm_values:
   manifests:
     role_cert_manager: true
   pod:
+    labels:
+      include_app_kubernetes_io: false
     sidecars:
       libvirt_exporter: true
