--- a/roles/ovn/vars/main.yml
+++ b/roles/ovn/vars/main.yml
@@ -34,6 +34,8 @@ _ovn_helm_values:
     ovn_ovsdb_sb:
       size: 20Gi
   pod:
+    labels:
+      include_app_kubernetes_io: false
     probes:
       ovn_northd:
         northd:
