--- a/roles/vault/vars/main.yml
+++ b/roles/vault/vars/main.yml
@@ -89,16 +89,19 @@ _vault_config:
           - name: ansible
             bound_service_account_names: ["ansible"]
             bound_service_account_namespaces: ["{{ vault_namespace | quote }}"]
+            audience: https://kubernetes.default.svc
             policies: ["ansible"]
             ttl: 1m
           - name: external-secrets-cluster-secret-store
             bound_service_account_names: ["external-secrets"]
             bound_service_account_namespaces: ["external-secrets"]
+            audience: https://kubernetes.default.svc
             policies: ["read_kv_all"]
             ttl: 1h
           - name: vault
             bound_service_account_names: ["*"]
             bound_service_account_namespaces: ["{{ vault_namespace | quote }}", "openstack"]
+            audience: https://kubernetes.default.svc
             policies: ["read_kv_all"]
             ttl: 1h
     policies:
