--- a/playbooks/secrets.yml
+++ b/playbooks/secrets.yml
@@ -1,7 +1,7 @@
 # Copyright (c) 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
-- name: Deploy Vault
+- name: Deploy Secrets Infrastructure
   hosts: controllers
   become: true
   roles:
@@ -9,6 +9,9 @@
       when: atmosphere_vault_internal | default(true) | bool
       tags:
         - vault
+    - role: external_secrets
+      tags:
+        - external-secrets
 
 - hosts: "{{ target | default('controllers') }}"
   become: true
@@ -32,11 +35,3 @@
       env:
         VAULT_IMAGE: "{{ atmosphere_images['vault'] }}"
         VAULT_CT_IMAGE: "{{ atmosphere_images['consul_template'] }}"
-
-- name: Deploy External Secrets
-  hosts: controllers
-  become: true
-  roles:
-    - role: external_secrets
-      tags:
-        - external-secrets
