--- a/roles/vault/vars/main.yml
+++ b/roles/vault/vars/main.yml
@@ -71,6 +71,8 @@ _vault_config:
     auth:
       - type: approle
         path: approle
+        options:
+          listing_visibility: hidden
         roles:
           - name: ansible
             description: Ansible role for Vault
@@ -161,7 +163,6 @@ _vault_keycloak_config:
           oidc_client_id: "{{ vault_keycloak_client_id }}"
           oidc_client_secret: "{{ vault_keycloak_client_secret }}"
           default_role: "default"
-          listing_visibility: "unauth"
         roles:
           - name: default
             token_type: default
