test: debug external-secrets
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/roles/external_secrets/meta/main.yml
+++ b/roles/external_secrets/meta/main.yml
@@ -20,7 +20,7 @@ galaxy_info:
 dependencies:
   - role: defaults
   - role: atmosphere.common.external_secrets_operator
-    vars:
-      external_secrets_operator_image: "{{ atmosphere_images['external_secrets_operator'] }}"
-      external_secrets_operator_node_selector:
-        openstack-control-plane: enabled
+    # vars:
+    #   external_secrets_operator_image: "{{ atmosphere_images['external_secrets_operator'] }}"
+    #   external_secrets_operator_node_selector:
+    #     openstack-control-plane: enabled
