--- a/roles/cinder/vars/main.yml
+++ b/roles/cinder/vars/main.yml
@@ -21,7 +21,9 @@ __cinder_helm_values:
       include_app_kubernetes_io: false
     replicas:
       api: 3
+      volumes: 3
       scheduler: 3
+      backup: 3
     mounts:
       cinder_volume:
         cinder_volume:
