--- a/images/barbican/Dockerfile
+++ b/images/barbican/Dockerfile
@@ -1,16 +1,14 @@
 # SPDX-FileCopyrightText: © 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: GPL-3.0-or-later
-# Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
+# Atmosphere-Rebuild-Time: 2025-08-05T01:17:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/barbican repo=https://opendev.org/openstack/barbican.git branch=master
-ARG BARBICAN_GIT_REF=9f1f1c66a841ab8150e8c1c1bdb529f190086c2f
-ADD --keep-git-dir=true https://opendev.org/openstack/barbican.git#${BARBICAN_GIT_REF} /src/barbican
-RUN git -C /src/barbican fetch --unshallow
+ADD https://opendev.org/openstack/barbican.git#9f1f1c66a841ab8150e8c1c1bdb529f190086c2f /src/openstack/barbican
+RUN PBR_VERSION=20.0.0-dev.25 uv build --wheel /src/openstack/barbican --out-dir /wheels
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
     --constraint /upper-constraints.txt \
-        /src/barbican \
+        /wheels/*.whl \
         pykmip
 EOF
 
