[test] show case for Cinder service HA
Change-Id: I204dcd15ec7466574940532a43cbb184cf797e0c
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -107,8 +107,10 @@ cinder_helm_values:
         osapi_volume_workers: 2
   pod:
     replicas:
-      api: 1
-      scheduler: 1
+      api: 2
+      scheduler: 2
+      volume: 2
+      backup: 2
 
 placement_helm_values:
   conf:
