fix(designate): set producer replicas to 1
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/designate/vars/main.yml
+++ b/roles/designate/vars/main.yml
@@ -33,7 +33,8 @@ _designate_helm_values:
       api: 3
       central: 3
       mdns: 3
-      producer: 3
+      # NOTE(mnaser): https://github.com/vexxhost/atmosphere/issues/2824
+      producer: 1
       sink: 3
       worker: 3
   manifests:
