--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -62,6 +62,7 @@ __neutron_helm_values:
         password: "{{ openstack_helm_endpoints_neutron_keystone_password }}"
       oslo_messaging_notifications:
         driver: noop
+    neutron_vpnaas:
       service_providers:
         service_provider: VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
     dhcp_agent:
@@ -102,8 +103,6 @@ __neutron_ovn_helm_values:
         service_plugins: qos,ovn-router,segments,trunk,log,ovn-vpnaas,taas,tapmirror
       ovn:
         ovn_emit_need_to_frag: true
-      service_providers:
-        service_provider: VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ovn_ipsec.IPsecOvnVPNDriver:default
     ovn_metadata_agent:
       DEFAULT:
         metadata_proxy_shared_secret: "{{ openstack_helm_endpoints['compute_metadata']['secret'] }}"
