set libvirt remote api tls version to tls 1.3
Signed-off-by: Yaguang Tang <yaguang.tang@vexxhost.com>

--- a/roles/libvirt/vars/main.yml
+++ b/roles/libvirt/vars/main.yml
@@ -26,6 +26,7 @@ _libvirt_helm_values:
       listen_tcp: "0"
       listen_tls: "1"
       listen_addr: 0.0.0.0
+      tls_priority: "NORMAL:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2"
     qemu:
       default_tls_x509_verify: "1"
       vnc_tls: "1"
