--- a/roles/manila/vars/main.yml
+++ b/roles/manila/vars/main.yml
@@ -60,6 +60,8 @@ _manila_helm_values:
         service_image_name: "{{ manila_image_name }}"
         service_instance_flavor_id: "{{ _manila_flavor.flavor.id }}"
         service_instance_security_group: manila-service-security-group
+        service_instance_boot_from_volume: true
+        boot_volume_size: "{{ manila_flavor_disk }}"
       oslo_messaging_notifications:
         driver: noop
       nova:
