feat: enable confluent-kafka
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/openstack-venv-builder/Dockerfile
+++ b/images/openstack-venv-builder/Dockerfile
@@ -36,6 +36,7 @@ uv cache clean uwsgi
 uv venv --system-site-packages /var/lib/openstack
 uv pip install \
     --constraint /upper-constraints.txt \
+        confluent-kafka \
         cryptography \
         pymysql \
         python-binary-memcached \
