use raw format for manila service image
Change-Id: I82af30724378785764284c161d9815a2dff61188
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/.github/workflows/manila.yml
+++ b/.github/workflows/manila.yml
@@ -64,7 +64,7 @@ jobs:
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'release'
         run: |
           swift post -r '.r:*,.rlistings' atmosphere-images
-          swift upload atmosphere-images manila-*.qcow2
+          swift upload atmosphere-images manila-*.raw
         env:
           OS_AUTH_URL: https://auth.vexxhost.net/v3
           OS_REGION_NAME: ca-ymq-1
