--- a/roles/glance_image/tasks/main.yml
+++ b/roles/glance_image/tasks/main.yml
@@ -24,6 +24,8 @@
   delay: 1
   until: _image_info is not failed
 
+  # TODO(ricolin): Add check if image format are the same, otherwise, recreate image
+
 - name: Download image and upload into Glance
   run_once: true
   when: _image_info.images | length == 0
