--- a/roles/manila/tasks/generate_resources.yml
+++ b/roles/manila/tasks/generate_resources.yml
@@ -32,6 +32,7 @@
     glance_image_url: "{{ manila_image_url }}"
     glance_image_container_format: "{{ manila_image_container_format }}"
     glance_image_disk_format: "{{ manila_image_disk_format }}"
+    glance_image_varify_format: "{{ manila_image_varify_format | bool }}"
 
 - name: Create generic share driver security group
   openstack.cloud.security_group:
