--- a/roles/manila/defaults/main.yml
+++ b/roles/manila/defaults/main.yml
@@ -38,6 +38,7 @@ manila_image_name: manila-service-image
 manila_image_url: "https://object-storage.public.mtl1.vexxhost.net/swift/v1/b98c5fdfb9be4e39a34b93d0b425ac2b/atmosphere-images/manila-{{ atmosphere_version | regex_replace('-beta.','b') }}.raw" # noqa yaml[line-length]
 manila_image_container_format: bare
 manila_image_disk_format: raw
+manila_image_varify_format: true
 
 # Service instance authentication
 manila_ssh_key: "{{ undef('You must provide a private SSH key using manila_ssh_key') }}"
