chore: use github.com for git clones
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/designate/Dockerfile
+++ b/images/designate/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2025-02-20T21:42:46Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/designate repo=https://opendev.org/openstack/designate.git branch=stable/2024.2
+# renovate: name=openstack/designate repo=https://github.com/openstack/designate.git branch=stable/2024.2
 ARG DESIGNATE_GIT_REF=5490df4e6b60f00e31e0ff57f863e406728e4eef
-ADD --keep-git-dir=true https://opendev.org/openstack/designate.git#${DESIGNATE_GIT_REF} /src/designate
+ADD --keep-git-dir=true https://github.com/openstack/designate.git#${DESIGNATE_GIT_REF} /src/designate
 RUN git -C /src/designate fetch --unshallow
 COPY patches/designate /patches/designate
 RUN git -C /src/designate apply --verbose /patches/designate/*
