--- a/images/cinder/Dockerfile
+++ b/images/cinder/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2025-02-20T21:42:46Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/cinder repo=https://opendev.org/openstack/cinder.git branch=stable/2024.2
+# renovate: name=openstack/cinder repo=https://github.com/openstack/cinder.git branch=stable/2024.2
 ARG CINDER_GIT_REF=bb37fbbe081723de3ef609f64983ea40be5e711a
-ADD --keep-git-dir=true https://opendev.org/openstack/cinder.git#${CINDER_GIT_REF} /src/cinder
+ADD --keep-git-dir=true https://github.com/openstack/cinder.git#${CINDER_GIT_REF} /src/cinder
 RUN git -C /src/cinder fetch --unshallow
 COPY patches/cinder /patches/cinder
 RUN git -C /src/cinder apply --verbose /patches/cinder/*
