--- a/images/ironic/Dockerfile
+++ b/images/ironic/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2025-02-20T21:42:46Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/ironic repo=https://opendev.org/openstack/ironic.git branch=stable/2024.2
+# renovate: name=openstack/ironic repo=https://github.com/openstack/ironic.git branch=stable/2024.2
 ARG IRONIC_GIT_REF=76ed064072f52eb496ff5d1023bfaf0371d0501e
-ADD --keep-git-dir=true https://opendev.org/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
+ADD --keep-git-dir=true https://github.com/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
 RUN git -C /src/ironic fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
