chore: use github.com for git clones
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/barbican/Dockerfile
+++ b/images/barbican/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/barbican repo=https://opendev.org/openstack/barbican.git branch=master
+# renovate: name=openstack/barbican repo=https://github.com/openstack/barbican.git branch=master
 ARG BARBICAN_GIT_REF=9f1f1c66a841ab8150e8c1c1bdb529f190086c2f
-ADD --keep-git-dir=true https://opendev.org/openstack/barbican.git#${BARBICAN_GIT_REF} /src/barbican
+ADD --keep-git-dir=true https://github.com/openstack/barbican.git#${BARBICAN_GIT_REF} /src/barbican
 RUN git -C /src/barbican fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
